--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "git+https://github.com/modelcontext/modelcontextprotocol.git",
-    "dotenv": "^16.3.1",
-    "node-fetch": "^3.4.1"
-  }
+ "dependencies": {
+  "@modelcontextprotocol/sdk": "0.1.3",
+  "dotenv": "^16.3.1",
+  "node-fetch": "^3.4.1"
+}
 }
