--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js"
   },
- "dependencies": {
-  "@modelcontextprotocol/sdk": "0.1.3",
+"dependencies": {
+  "@modelcontextprotocol/sdk": "github:modelcontext/modelcontextprotocol",
   "dotenv": "^16.3.1",
   "node-fetch": "^3.4.1"
 }
