--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
-"dependencies": {
-  "@modelcontextprotocol/sdk": "github:modelcontext/modelcontextprotocol",
-  "dotenv": "^16.3.1",
-  "node-fetch": "^3.4.1"
-}
+  "dependencies": {
+    "@modelcontextprotocol/sdk": "https://github.com/modelcontext/modelcontextprotocol.git",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.4.1"
+  }
 }
