--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^5.1.0",
+    "fastmcp": "^3.1.1",
     "node-fetch": "^3.3.2",
     "zod": "^3.25.63"
   }
